--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 	%sveltekit.head%
 </head>
 
-<body>
+<body class="w-screen h-screen overflow-hidden">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
