fix: Fix screen overflow

--- a/src/app.html
+++ b/src/app.html
@@ -13,8 +13,8 @@
 	%sveltekit.head%
 </head>
 
-<body class="w-screen h-screen overflow-hidden">
-	<div style="display: contents">%sveltekit.body%</div>
+<body>
+	%sveltekit.body%
 </body>
 
 </html>
