chore: Update dependencies

--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>Pierre Lespingal's portfolio</title>
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <!-- Favicons -->
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
