--- a/src/app.html
+++ b/src/app.html
@@ -1,40 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Pierre Lespingal's portfolio</title>
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <!-- Favicons -->
-    <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="%sveltekit.assets%/favicon-16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="%sveltekit.assets%/favicon-32x32.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="%sveltekit.assets%/apple-touch-icon.png"
-    />
-    <meta name="viewport" content="width=device-width" />
+	<head>
+		<meta charset="utf-8" />
+		<title>Pierre Lespingal's portfolio</title>
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<!-- Favicons -->
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<meta name="viewport" content="width=device-width" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap"
-      rel="stylesheet"
-    />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=Lexend:wght@100..900&display=swap"
+			rel="stylesheet"
+		/>
 
-    %sveltekit.head%
-  </head>
+		%sveltekit.head%
+	</head>
 
-  <body>
-    <div style="display: contents">%sveltekit.body%</div>
-  </body>
+	<body>
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
